fix: add libyaml-dev to build

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -12,6 +12,10 @@ bases:
     run-on:
     - name: ubuntu
       channel: "22.04"
+parts:
+  charm:
+    build-packages:
+      - libyaml-dev
 config:
   options:
     debug:
